--- a/src/Arduinode.css
+++ b/src/Arduinode.css
@@ -526,6 +526,12 @@ table.dispositivos.adminfalse tr {
     height:85px;
     padding: 5px 10px 10px 10px;
 }
+li.iconDispositivos span {
+    position:absolute;
+    font-weight:bold;
+    right:12px;
+    font-size:.9em;
+}
 .dispositivos li.iconDELETE a {;
     font-size:2.5em !important;
 }
