Se quitaron las animaciones del switch para mejor performance en celular

--- a/src/Arduinode.css
+++ b/src/Arduinode.css
@@ -631,6 +631,12 @@ table > tr td div {
     width: 122px !important;
     display: block;
 }
+div.switchContainer * {
+    -moz-transition: none;
+    -webkit-transition: none;
+    -o-transition: color 0 ease-in;
+    transition: none;
+}
 .switchContainer span {
     position: absolute;
     color: #fff;
