--- a/src/Arduinode.css
+++ b/src/Arduinode.css
@@ -397,6 +397,7 @@ header .iconLogin{
     margin-top: -5px !important;
 }
 header,.footer {
+    box-shadow: 0px 5px 25px #888;
     background-color: #F73859;
     width: 100%;
     height: 54px;
@@ -413,6 +414,7 @@ header,.footer {
     top: auto;
     font-size: 1em;
     background: #384259;
+    box-shadow: 0px -5px 25px #888;
 }
 .footer h3 {
     position: absolute;
