Funcionalidad para setear dias de ejecucion en las subtareas

--- a/src/Arduinode.css
+++ b/src/Arduinode.css
@@ -807,6 +807,11 @@ table.subtareas .titulos td:last-child {
 table.subtareas .col3:first-child input {
     margin-right: 20px;
 }
+table.subtareas .diasEjecucion {
+    display:flex;
+    justify-content: space-between;
+    padding:0 10px;
+}
 input[type=date], input[type=time] {
     margin: 0 auto;
     width: 100%;
