--- a/src/_elementos.sass
+++ b/src/_elementos.sass
@@ -53,7 +53,7 @@ table
 
 .listIcons 
     display: flex
-    justify-content: space-between
+    justify-content: flex-start
     float: right
     margin-right: 12px
     
