--- a/src/_iconos.sass
+++ b/src/_iconos.sass
@@ -34,7 +34,7 @@ table
 
 .Lamp0 
 	a
-		color: yellow
+		color: #c7c708
 
 		&:before
 			content: "\2600"
@@ -59,7 +59,7 @@ table
 			content: "\2611"
 
 .Microfono
-	font-size: 1.4em
+	font-size: 1.4em !important
 
 .Reloj a:before
 	content: "\23f1"
