--- a/src/_iconos.sass
+++ b/src/_iconos.sass
@@ -89,3 +89,72 @@ table
 
 	.iconUP:before
 		content: "\25B2"
+
+
+/* Google now mic */
+.mic 
+	margin: 0 auto
+
+	h1, p 
+		font-size: 2em
+		text-align: center
+		margin: 0 auto
+		line-height: 1.4em
+		max-width: 250px
+		font-size: 1em
+	h1 
+		font-size: 2.5em
+		
+.mic :before, .mic :after
+	content: ''
+	position: absolute
+	background-color: #fff
+
+.mc
+	position: absolute
+	top: 50% 
+	left: 37%
+	height: 24%
+	width: 26.5%
+	overflow: hidden
+
+.mc:before
+	bottom: 50%
+	width: 100% 
+	height: 100%
+	box-sizing: border-box
+	border-radius: 50%
+	border: 0.5em solid #fff
+	background: none
+
+.mc:after
+	top: 50% 
+	left: 40%
+	width: 20% 
+	height: 25%
+
+.googleNowMic
+	position: relative
+	margin: 5% auto
+	background-color: #FE2222
+	border-radius: 50%
+	width: 5em
+	height: 5em
+	box-shadow: 5px 5px 5px #888
+	border: 2em solid #F1F1F3
+
+.googleNowMic:after
+	top: 30% 
+	left: 43%
+	height: 15% 
+	width: 14%
+	border-top-left-radius: 50%
+	border-top-right-radius: 50%
+
+.googleNowMic:before
+	top: 40% 
+	left: 43%
+	height: 15% 
+	width: 14%
+	border-bottom-left-radius: 50%
+	border-bottom-right-radius: 50%
