Se corrigio superposicion de textos para salidas temporizadas

--- a/src/Arduinode.sass
+++ b/src/Arduinode.sass
@@ -253,7 +253,7 @@ table.salidas
             color: #fff
 
         .switch:after
-            content: ""
+            content: "" !important
             left: 38px !important
 
 .dispositivosSelect
